# HiRISE_diffusion

./: .gitignore  README.md  interpolate.ipynb  pyproject.toml
data/: dataset.py
data/normalization_analysis/: README.md
data/normalization_analysis/scripts/: raw_distribution_analysis.py
notes/: BBDM_note.md  CM_Diff_note.md  ReadingList.md  dataset.md  eval.md  eval_ardan.md  inference.md  resources.md
notes/papers/: cm_diff_extracted.txt  tmp_arch.txt  tmp_pages.txt
scripts/: README.md  compute_prior.sh  download_dexined.py  eval.sh  eval_FM.sh  eval_ardan.sh  eval_ddpm.sh  eval_fm.sh  train.sh  train_FM.sh  train_ddpm.sh  train_fm.sh
src/: compute_prior.py  config.py  eval.py  eval_ardan.py  eval_ddpm.py  eval_fm.py  inference.py  inference_ddpm.py  inference_fm.py  metrics_ardan.py  sample.py  train.py  train_ddpm.py  train_fm.py
src/configs/: gen_eval_categories_ardan.py
src/diffusion/: __init__.py  edge.py  fm_utils.py  process.py  scheduler.py
src/models/: __init__.py  bidirectional_fm.py  cm_diff_unet.py  ir2red_ddpm.py  ir2red_fm.py  red2ir_ddpm.py  red2ir_fm.py  unet.py
src/models/dexined/: __init__.py  model.py
tests/: test_imports.py  test_smoke.py
